# calculatorclionpridemic

./: CMakeLists.txt  calculator.cpp  calculator.h  conanfile.txt  dockerfile  main.cpp  test.cpp
.github/workflows/: cmake.yml
